--- a/dashboard/src/layouts/secondbar.scss
+++ b/dashboard/src/layouts/secondbar.scss
@@ -5,7 +5,7 @@
 
   .box{
     padding-top: 10px;
-    padding-left: 2%;
+    padding-left: 1%;
 
     ul{
       list-style: none;
@@ -18,12 +18,11 @@
 
         li{
           height: auto;
-          width: 32%;
+          width: 32.4%;
           display: flex;
           align-items: center;
           flex-direction: row;  
           box-sizing:content-box;
-          background: #FFFFFF;
           border: 1px solid #201F67;
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 1px 2px rgba(0, 0, 0, 0.05);
           border-radius: 8px;
@@ -62,3 +61,8 @@
     
   }
 }
+
+.active {
+        color: #ffffff;
+        background-color: #012970;
+      }
