--- a/dashboard/src/components/Statuspage/statuspage.css
+++ b/dashboard/src/components/Statuspage/statuspage.css
@@ -19,6 +19,7 @@
         width: 1260px;
         overflow: hidden;
         overflow-y: scroll;
+        /*overflow-x: scroll;*/
         margin-left: 15px; ;
 }
 .card{
@@ -50,6 +51,7 @@
         width:20px;
         height: 20px;
         border-radius: 10px;
+        cursor: pointer;
 
 
 }
@@ -60,8 +62,20 @@
         border-radius: 3px;
         text-align: center;
         padding-top: 5px;
-
+        cursor: pointer;
+        
 }
+/*
+[ auto | default | none | context-menu | help | pointer |
+progress | wait | cell | crosshair | text | vertical-text |
+alias | copy | move | no-drop | not-allowed | e-resize |
+n-resize | ne-resize | nw-resize | s-resize | se-resize |
+sw-resize | w-resize | ew-resize | ns-resize | nesw-resize |
+nwse-resize | col-resize | row-resize | all-scroll | zoom-in |
+zoom-out | grab | grabbing ] ]
+*/
+
+
 /*Machine Status*/
 .machine-status{
         justify-content: space-between;
