--- a/dashboard/src/layouts/Header.css
+++ b/dashboard/src/layouts/Header.css
@@ -1,6 +1,6 @@
 
 .header{
-        transition: all 0.5s;
+        transition: all 0.5s ease-in-out;
         display: flex;
         justify-content: space-between;
         height: 40px;
