--- a/dashboard/src/layouts/Header.css
+++ b/dashboard/src/layouts/Header.css
@@ -4,6 +4,7 @@
         display: flex;
         justify-content: space-between;
         height: 40px;
+        align-items: normal;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 2px 2px 2px rgba(0, 0, 0, 0.05);
         background-color:#fff;
         padding-left: 10px;
@@ -46,10 +47,10 @@ I
 
 .datetime-container {
         display: flex;
-        justify-content: space-between;
         align-items: center;
         margin-top: 5px;
-        margin-right: 10px;
+        margin-left: 68%;
+        cursor: default;
         
       }
       
@@ -57,4 +58,13 @@ I
         font-size: 1.5em;
         margin: 0;
       }
-      
+.settings{
+        width: 35px;
+        height: 35px;
+        box-shadow: none;
+        margin-top: 3px;
+}
+.settings:hover{
+        transition: all 0.1s;
+        color: #646464;
+}
