--- a/dashboard/src/components/Statuspage/statuspage.css
+++ b/dashboard/src/components/Statuspage/statuspage.css
@@ -1,34 +1,22 @@
 /*RealTime*/
-.real-time-container{
-        justify-content: space-between;
-        justify-content: center;
-        align-items: center;
-        margin-left: 10px;
-        padding:10px;
-        border: 1px solid #ccc;
-        height: 950px;
-        width: 1260px;
-}
 .card-grid{
         display: grid;
         grid-template-columns: repeat(5, 1fr);
         grid-gap: 10px;
-        padding:10px;
-        border: 1px solid #ccc;
-        height: 950px;
-        width: 1260px;
-        overflow: hidden;
-        overflow-y: scroll;
-        /*overflow-x: scroll;*/
-        margin-left: 15px; ;
+        height: 88%;
+        width: 99%;
+        padding-top: 10px;
+        padding-left: 30px;
+        overflow: hidden; ;
 }
 .card{
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding: 10px;
+        padding: 5px;
         border: 1px solid #ccc;
-        height: 330px;
+        height: 175px;
+        overflow: hidden;
         width: 98%;
         border: 1px solid #000;
         border-radius: 5px;
@@ -41,14 +29,24 @@
         flex-direction: row;
         align-items: center;
         justify-content: space-between;
-        padding: 5%;
+        padding: 5px;
         width: 98%;
+        /*color: #012970;*/
+}
+.bodyrow1{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        margin-bottom: 5px;
+        border: 1px solid #e6e6e6;
         /*color: #012970;*/
 
 }
+
+
 .statusdot{
-        margin-left: 30px;
-        width:20px;
+        width:160px;
         height: 20px;
         border-radius: 10px;
         cursor: pointer;
