--- a/dashboard/src/components/Statuspage/statuspage.css
+++ b/dashboard/src/components/Statuspage/statuspage.css
@@ -18,7 +18,7 @@
         height: 175px;
         overflow: hidden;
         width: 98%;
-        /*border: 1px solid #000;*/
+        border: 1px solid #b6b6b6;
         border-radius: 10px;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 2px 2px 2px rgba(0, 0, 0, 0.05);
 
