--- a/dashboard/src/components/Statuspage/statuspage.css
+++ b/dashboard/src/components/Statuspage/statuspage.css
@@ -4,18 +4,17 @@
         grid-template-columns: repeat(5, 1fr);
         grid-row-gap: 15px;
         grid-column-gap:10px;
-        height: 88%;
+        
         width: 99%;
         padding-top: 5px;
-        padding-left: 30px;
-        overflow: hidden; 
+        padding-left: 30px; 
 }
 .card{
         display: flex;
         flex-direction: column;
         align-items: center;
         border: 1px solid #ccc;
-        height: 175px;
+        height: 100%;
         overflow: hidden;
         width: 98%;
         border: 1px solid #b6b6b6;
@@ -47,27 +46,25 @@
         padding-left: 10px;
         width: 100%;/*98%*/
 }
-.bodyrow1{
+.bodyrow{
         display: flex;
-        flex-direction: row;
         align-items: center;
         justify-content: space-between;
-        margin-bottom: 5px;
-        border: 1px solid #e6e6e6;
-        /*color: #012970;*/
+        width: 100%;/*98%*/
 
 }
 
 
 .lable{
         width:80px;
-        height:30px;
+        height:22px;
         border: 2px solid #ccc;
         border-radius: 3px;
         text-align: center;
-        padding-top: 5px;
-        cursor: pointer;
-        
+        padding-top: 2px;
+        cursor: pointer;        
+        font-weight:bold;
+        font-size:14px;
 }
 .tooltip{
         background-color: #fff;
