--- a/dashboard/src/pages/Summary/Summary.scss
+++ b/dashboard/src/pages/Summary/Summary.scss
@@ -13,7 +13,7 @@
       display: grid;
       height: 90vh;
       grid-template-columns: 15% 40% 45%;
-      grid-template-rows: 55% 35%;
+      grid-template-rows: 58% 35%;
       grid-template-areas: 
       "machines table graph"
       "machines percentages widgets3"
@@ -67,9 +67,10 @@
         justify-content: center;
 
         .tableTitle{
+          color: rgb(95, 88, 88);
           padding: 17px;
           font-weight: 700;
-          font-size: 20px;
+          font-size: 18px;
           font-family:sans-serif;
           justify-items: center;
           align-items: center;
