--- a/dashboard/src/components/SummaryComponents/Tables/ProductTable.scss
+++ b/dashboard/src/components/SummaryComponents/Tables/ProductTable.scss
@@ -1,9 +1,10 @@
-.summaryTable {
+.productTable {
   margin: 20px 0;
   border-collapse: collapse;
 
   table {
     width: 100%;
+    height: 100%;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.25);
     
   }
