--- a/dashboard/src/pages/Summary/Summary.scss
+++ b/dashboard/src/pages/Summary/Summary.scss
@@ -11,10 +11,11 @@
     }
 
     .container2{
+      justify-content: center;
+      margin-top: 10px;
       display: grid;
-      height: 90vh;
-      grid-template-columns: 15% 40% 45%;
-      grid-template-rows: 58% 35%;
+      grid-template-columns: 14% 40% 45%;
+      grid-template-rows: 60% 38%;
       grid-template-areas: 
       "machines table graph"
       "machines percentages widgets3"
@@ -49,6 +50,11 @@
         display: flex;
         padding: 20px;
         gap:20px;
+        
+        .widgets{
+          height: 100%;
+          width: 100%;
+        }
       }
 
       .graph{
@@ -56,6 +62,10 @@
         grid-area: graph;
         padding: 30px;
         gap:20px;
+        .chart-container {
+          width: 100%;
+          height: 100%;
+        }
 
 
       }
@@ -78,6 +88,10 @@
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 1px 2px rgba(0, 0, 0, 0.05);
           background-color: rgb(251, 240, 255);
         }
+
+        .productTable{
+          height: 85%;
+        }
   
       }
       .percentages{
@@ -85,9 +99,13 @@
         grid-area: percentages;
         display: flex;
         flex-direction: row;
-        padding: 15px;
+        padding: 17px;
         gap:20px;
-  
+
+        .product-percentage {
+        
+          height: 100%;
+        }
       }
     }
       
