--- a/dashboard/src/layouts/Header.css
+++ b/dashboard/src/layouts/Header.css
@@ -48,7 +48,7 @@ I
         display: flex;
         align-items: center;
         margin-top: 5px;
-        margin-left: 68%;
+        margin-left: 67%;
         cursor: default;
         
       }
@@ -60,10 +60,13 @@ I
 .settings{
         width: 35px;
         height: 35px;
-        box-shadow: none;
-        margin-top: 3px;
+        margin-top: 2px;    
+        background-color: #fff;
+        box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
+
+        
 }
 .settings:hover{
-        transition: all 0.1s;
-        color: #646464;
+        color: #5662cc;
+        transform: scale(1.08);
 }
