--- a/dashboard/src/components/SettingsPage/settingspage.css
+++ b/dashboard/src/components/SettingsPage/settingspage.css
@@ -40,13 +40,14 @@
     font-size: 16px;
     margin: 15px 3px;
     cursor: pointer;
-    width:260px;
+    width:265px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.25), 2px 2px 2px rgba(0, 0, 0, 0.05);
 }
 
 .buttons:hover{
     color: #5662cc;
     transform: scale(1.02);
+    border-right: 3px solid #201f67;
 }
 
 .machinesettings{
@@ -74,7 +75,7 @@
     font-size: 16px;
     margin: 15px 3px;
     cursor: pointer;
-    width:260px;
+    width:265px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.25), 2px 2px 2px rgba(0, 0, 0, 0.05);
 }
 .selectbutton:hover{
