--- a/dashboard/src/components/SettingsPage/settingspage.css
+++ b/dashboard/src/components/SettingsPage/settingspage.css
@@ -9,6 +9,17 @@
 
   }
 
+  .fixed-element2{
+    position: fixed;
+    inset: 0; /* Shorthand for top: 0; right: 0; bottom: 0; left: 0; */
+    width: 100%; /* Optional: Set width to 100% for horizontal filling */
+    height: 100%; /* Optional: Set height to 100% for vertical filling */
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(55px); /* Add -webkit-backdrop-filter for Safari support */
+    z-index: 110;
+  
+  }
+
 .xbutton{
     background-color: #ffffff;
     color: black;
@@ -84,14 +95,9 @@
 }
 
 .dropbox{
-    width: 150px;
-    height: 35px;
-    border: 1px solid #d6d6d6;
-    border-radius: 5px;
-    padding: 5px;
-    margin-top: 30px;
-    margin-left: 380px;
-    font-size: medium;
+    width: 180px;
+    margin-top: 20px;
+    margin-left: 350px;
 }
 .lablelayer{
     width:300px;
@@ -122,6 +128,19 @@
     overflow-wrap: break-word;
 }
 
+.textbox{
+    font-family: Arial, sans-serif;
+    font-size: medium;
+    resize: none;
+    width: 300px;
+    height: 150px;
+    border: 1px solid #d6d6d6;
+    border-radius: 5px;
+    padding-left: 10px;
+    padding-top: 3px;
+
+}
+
 .buttonedit{
     background-color: #ffffff;
     border: '1px solid #000';
@@ -142,4 +161,15 @@
     color: #3847ce;
     background-color: #ebebeb;
     transform: scale(1.05);
+}
+
+.pwbox{
+    width: 450px;
+    height: 200px;
+    background-color: #ffffff;
+    border: 1px solid #8f8f8f;
+    border-radius: 0px;
+    overflow: hidden;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25), 2px 2px 2px rgba(0, 0, 0, 0.05);
+    
 }
