--- a/dashboard/src/components/Statuspage/statuspage.css
+++ b/dashboard/src/components/Statuspage/statuspage.css
@@ -7,7 +7,7 @@
         width: 99%;
         padding-top: 10px;
         padding-left: 30px;
-        overflow: hidden; ;
+        overflow: hidden;
 }
 .card{
         display: flex;
