--- a/dashboard/src/pages/RateSubPages/ProductProgress.scss
+++ b/dashboard/src/pages/RateSubPages/ProductProgress.scss
@@ -7,7 +7,7 @@
 }
 
 .product-block {
-    background-color: #f5f5f5;
+    background-color: #fef6ff;
     border: 1px solid #ddd;
     padding: 20px;
     border-radius: 8px;
@@ -18,7 +18,6 @@
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s, box-shadow 0.3s;
     cursor: pointer;
-    /* Add cursor pointer for interaction */
 }
 
 .product-block:hover {
@@ -46,5 +45,4 @@
     width: 100%;
     height: 300px;
     margin-top: 20px;
-    /* Add margin top for spacing */
 }
