--- a/dashboard/src/components/Statuspage/statuspage.css
+++ b/dashboard/src/components/Statuspage/statuspage.css
@@ -115,4 +115,10 @@ button {
         font-size: 25px;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 2px 2px 2px rgba(0, 0, 0, 0.05);
 }
+.chartext{
+    
+}
+.chartext:hover{
+    transform: scale(1.1);
 
+}
