class names edited

--- a/dashboard/src/pages/RateSubPages/HourlyRate.scss
+++ b/dashboard/src/pages/RateSubPages/HourlyRate.scss
@@ -63,14 +63,14 @@
                 color: white;
             }
 
-            .machine-number {
+            .Rmachine-number {
                 font-size: 14px;
             }
         }
 
-        .chart-container {
+        .Rchart-container {
             width: 75%;
-            height: 140px;
+            height: 160px;
         }
 
         .popup {
@@ -151,7 +151,7 @@
                 color: white;
             }
 
-            .machine-number {
+            .Rmachine-number {
                 font-size: 18px;
                 font-weight: bold; 
                 margin-bottom: 10px;
@@ -159,7 +159,7 @@
             }
         }
 
-        .chart-container {
+        .Rchart-container {
             width: 100%;
             height: 100%;
         }
