--- a/dashboard/src/components/SummaryComponents/Featured/ProductPercentage.scss
+++ b/dashboard/src/components/SummaryComponents/Featured/ProductPercentage.scss
@@ -38,6 +38,10 @@
       padding: 12px;
       font-family: sans-serif;
       font-weight: 500;
+      width: 200px;
+      height: 200px;
+       
+      
     }
   }
 }
