--- a/dashboard/src/components/SummaryComponents/Tables/SummaryTable.scss
+++ b/dashboard/src/components/SummaryComponents/Tables/SummaryTable.scss
@@ -1,5 +1,6 @@
 .summaryTable {
   margin: 20px 0;
+  width: 50%;
   border-collapse: collapse;
 
   table {
@@ -9,7 +10,7 @@
   }
 
   .key-column, .value-column {
-    padding: 12px;
+    padding: 10px;
     border: 1px solid #cfcccc;
     
 
