--- a/dashboard/src/layouts/Header.css
+++ b/dashboard/src/layouts/Header.css
@@ -19,8 +19,17 @@ I
         cursor: pointer;
         color: #012970;
 }
-     
 
+.logo {
+        line-height: 1;
+        
+}
+        
+@media (min-width: 1200px) {
+        .logo {
+        width: 240px;
+        }
+}
         
 .logo img {
         max-height: 45px;
@@ -28,15 +37,18 @@ I
         margin-top: 1px;
 }
         
-
+.logo span {
+        font-size: 26px;
+        font-weight: 700;
+        color: #012970;
+        font-family: 'Nunito', sans-serif;
+}
 
 .datetime-container {
         display: flex;
         align-items: center;
         margin-top: 5px;
-        /*
-        margin-left: 67%;
-        */
+        margin-left: 68%;
         cursor: default;
         
       }
@@ -48,13 +60,10 @@ I
 .settings{
         width: 35px;
         height: 35px;
-        margin-top: 2px;    
-        background-color: #fff;
-        box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
-
-        
+        box-shadow: none;
+        margin-top: 3px;
 }
 .settings:hover{
-        color: #5662cc;
-        transform: scale(1.08);
+        transition: all 0.1s;
+        color: #646464;
 }
