--- a/dashboard/src/layouts/Header.css
+++ b/dashboard/src/layouts/Header.css
@@ -32,13 +32,29 @@ I
 
 .datetime-container {
         display: flex;
+        flex-direction: row;
         align-items: center;
+        font-size: 12px;
         margin-top: 5px;
+        cursor: pointer;
         /*
-        margin-left: 67%;
+        padding-top: 5px;
+        color: #fff;
+        border: '1px solid black';
+        background-color: #012970;
+        width:300px;
+        height: 30px;
+        border-radius: 15px;
+        box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
+
         */
-        cursor: default;
-        
+      }
+
+      .datetime-container:hover {
+        transform: scale(1.1);
+      }
+      .datetime-container::first-line{
+        font-size: 2.5em;
       }
       
       h1 {
