--- a/dashboard/src/components/SettingsPage/settingspage.css
+++ b/dashboard/src/components/SettingsPage/settingspage.css
@@ -195,6 +195,7 @@
 .password-container h2 {
     text-align: center;
     margin-bottom: 20px;
+    margin-left: 30px; /* Move heading 30px to the right */
 }
 
 /* Form Group */
@@ -202,38 +203,41 @@
     margin-bottom: 15px;
     display: flex;
     flex-direction: column;
-    margin-left: 60px; /* Align with .lablelayer */
+    margin-left: 90px; /* Align with .lablelayer and move 30px to the right */
 }
 
 /* Form Labels */
 .form-label {
     font-weight: bold;
     font-size: large;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
     width: 300px; /* Match the width of .lablelayer */
+    margin-left: 45px; /* Move labels 30px to the right */
 }
 
 /* Form Inputs */
 .form-input {
     width: 60%; /* Match the width of .inputbox */
     height: 35px;
-    border: 1px solid #d6d6d6;
+    border: 1px solid #6e0ce6;
     border-radius: 5px;
     padding-left: 10px;
     font-size: medium;
+    margin-left: 45px; /* Move inputs 30px to the right */
 }
 
 /* Error Messages */
 .error {
     color: red;
     font-size: small;
-    margin-top: 5px;
+    margin-top: 10px;
+    margin-left: 45px; /* Move error messages 30px to the right */
 }
 
 /* Submit Button */
 .submit-button {
     background-color: #ffffff;
-    border: 1px solid #000;
+    border: 1px solid #6e0ce6;
     font-size: 16px; /* Reduced font size */
     font-weight: bold;
     color: rgb(0, 0, 0);
@@ -246,8 +250,7 @@
     box-shadow: 2px 2px 10px rgba(63, 11, 105, 0.25), 2px 2px 2px rgba(0, 0, 0, 0.05);
     margin: 35px auto 0; /* Centered button */
     display: block;
-    margin-left: calc(50% + 30px - 50px); /* Move 10px to the right */
-
+    margin-left: calc(50% + 85px - 50px); /* Move 30px to the right */
 }
 
 .submit-button:hover {
