--- a/dashboard/src/components/SettingsPage/settingspage.css
+++ b/dashboard/src/components/SettingsPage/settingspage.css
@@ -180,6 +180,16 @@
     transform: scale(1.05);
 }
 
+.pwbox{
+    width: 450px;
+    height: 200px;
+    background-color: #ffffff;
+    border: 1px solid #8f8f8f;
+    border-radius: 10px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25), 2px 2px 2px rgba(0, 0, 0, 0.05);
+
+}
+
 /* General Container */
 .password-container {
     width: 660px; /* Match the width of .machinesettings */
