--- a/dashboard/src/components/Statuspage/statuspage.css
+++ b/dashboard/src/components/Statuspage/statuspage.css
@@ -22,6 +22,9 @@
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 2px 2px 2px rgba(0, 0, 0, 0.05);
 
 }
+.card:hover{
+    transform: scale(1.01);
+}
 
 .statu{
         height: 20px;
