--- a/dashboard/src/layouts/Header.css
+++ b/dashboard/src/layouts/Header.css
@@ -63,12 +63,16 @@ I
         height: 35px;
         margin-top: 2px; 
         margin-left:30px;   
+        padding: 6px;
         background-color: #fff;
-        box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
+        border-radius: 50%;
+        box-shadow: none;
+
 
         
 }
 .settings:hover{
-        color: #5662cc;
-        transform: scale(1.08);
+    transition-duration: 400ms;
+    background-color: rgba(0, 0, 0, 0.13);
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
 }
