--- a/dashboard/src/components/RateComponents/SideBar/SideBar.scss
+++ b/dashboard/src/components/RateComponents/SideBar/SideBar.scss
@@ -16,40 +16,12 @@
     &:hover {
         width: 13rem;
         opacity: 1;
-            padding-left: -3rem;
+        padding-left: -3rem;
 
         ul {
             padding-right: 3rem;
-
         }
     }
-
-    //  .logoContainer {
-    //     display: flex;
-    //     align-items: center;
-    //     justify-content: space-between;
-    //     transition: opacity 0.5s, width 0.5s;
-
-
-    // h2.title {
-    //     font-size: 25px;
-    //     color: black;
-    //     padding: 0 0 0 0rem;
-    //     opacity: 1;
-    //         background-color: purple;
-    // }
-
-    //     img {
-    //         transition: right 0.5s, width 0.5s, height 0.5s;
-    //         width: 3rem;
-    //         height: 3rem;
-    //         left: 1rem;
-    //     }
-    // }
-
-    // &:hover .logoContainer h2.title {
-    //     opacity: 1;
-    // }
 
     .menuIconContainer {
         content: "";
@@ -92,7 +64,6 @@
             height: 3px;
             border-radius: 2rem;
             top: 0.4rem;
-            // transform: translateY(-0.4rem) rotate(45deg);
         }
 
         .menuIcon::before {
@@ -103,7 +74,6 @@
             height: 3px;
             border-radius: 2rem;
             top: -0.4rem;
-            // transform: translateY(0.4rem) rotate(-45deg);
         }
     }
 
@@ -129,7 +99,6 @@
             justify-content: flex-start;
             flex-direction: column;
             list-style: none;
-            // padding-left: 3rem;
             margin: 0;
 
             li {
@@ -138,6 +107,7 @@
                 max-width: 15rem;
                 width: 100%;
                 text-align: center;
+                position: relative; // Allow submenu to be positioned absolutely
 
                 a {
                     display: flex;
@@ -155,15 +125,14 @@
                     &:hover {
                         background-color: rgb(196, 196, 196);
                         color: rgb(255, 255, 255);
-                        
                     }
 
                     img {
                         margin-right: 0rem;
                         transition: margin 0.5s;
                         padding-left: 3rem;
-                        size: 30px 30px;
                     }
+
                     span {
                         transition: opacity 0.5s;
                         opacity: 0;
@@ -173,6 +142,40 @@
                 &.active a {
                     background-color: rgb(238, 189, 238);
                     color: rgb(91, 89, 218);
+                }
+
+                &.hovered .submenu {
+                    display: block;
+                }
+            }
+
+            .submenu {
+                position: absolute;
+                top: 0;
+                left: 100%;
+                background-color: rgb(238, 189, 238);
+                box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+                border-radius: 8px;
+                list-style: none;
+                padding: 0;
+                margin: 0;
+                display: none;
+                z-index: 2; // Ensure it overlaps other content
+
+                li {
+                    padding: 1rem 2rem;
+                    cursor: pointer;
+
+                    a {
+                        text-decoration: none;
+                        color: rgb(71, 71, 71);
+                        font-size: 16px;
+                        font-weight: normal;
+
+                        &:hover {
+                            color: rgb(91, 89, 218);
+                        }
+                    }
                 }
             }
         }
