--- a/dashboard/src/layouts/secondbar.scss
+++ b/dashboard/src/layouts/secondbar.scss
@@ -2,7 +2,7 @@
     width: 100%;
     height: 50px;
     margin-bottom: 10px;
-
+    z-index: 150;
 
     .box {
         padding-top: 8px;
@@ -29,13 +29,21 @@
                     0px 1px 2px rgba(0, 0, 0, 0.05);
                 border-radius: 8px;
                 justify-content: center;
+                position: relative; // To position the submenu
 
                 &:hover {
                     cursor: pointer;
-                    /*background: #c6b2f1;*/
-                    color:#5662cc;
-                    fill:#5662cc;
+                    color: #5662cc;
+                    fill: #5662cc;
                     transform: scale(1.02);
+                    z-index: 170;
+
+                    .submenu {
+                        display: flex;
+                        flex-direction: row;
+                        gap: 5.3%;
+                        padding-top: 6px;
+                    }
                 }
 
                 .icon {
@@ -44,7 +52,6 @@
                     place-items: center;
                     color: #201f67;
                 }
-                
 
                 span {
                     font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
@@ -52,10 +59,46 @@
                     margin-left: 10px;
                     color: #201f67;
                     font-size: 15px;
-                    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-                        "Lucida Sans", Arial, sans-serif;
                     font-style: normal;
                     font-weight: bold;
+                }
+
+                .submenu {
+                    position: absolute;
+                    top: 100%;
+                    left: 4%;
+                    list-style: none;
+                    padding: 0px 0 0px 10px;
+                    margin: 0;
+                    width: 100%;
+                    display: none; // Hide submenu by default
+                    z-index: 160; // Ensure it overlaps other content
+
+
+                    li {
+                        padding: 1rem 2rem;
+                        cursor: pointer;
+                        border-bottom: 1px solid #ddd;
+                        width: 180px;
+                        height: 10px;
+
+                        &:last-child {
+                            border-bottom: none;
+                        }
+
+                        a {
+                            text-decoration: none;
+                            color: rgb(71, 71, 71);
+                            font-size: 15px;
+                            font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+                                    "Lucida Sans", Arial, sans-serif;
+                            font-weight: bold;
+
+                            &:hover {
+                                color: rgb(91, 89, 218);
+                            }
+                        }
+                    }
                 }
             }
         }
