product-part changed

--- a/dashboard/src/pages/RateSubPages/ProductProgress.scss
+++ b/dashboard/src/pages/RateSubPages/ProductProgress.scss
@@ -9,9 +9,10 @@
 }
 
 .product-block {
+ 
     background-color: #fef6ff;
     border: 1px solid #ddd;
-    padding: 10px;
+    padding: 3px;
     border-radius: 8px;
     display: flex;
     flex-direction: column;
@@ -29,6 +30,7 @@
 }
 
 .product-info {
+    margin-top: 10px;
     text-align: center;
     margin-bottom: 20px;
 }
@@ -58,5 +60,5 @@
 .Pchart-container {
     width: 100%;
     margin-top: 0px;
-    margin-left: -30px;
+    margin-left: 10px;
 }
