--- a/dashboard/src/components/SummaryComponents/Widgets/ProductWidgets.scss
+++ b/dashboard/src/components/SummaryComponents/Widgets/ProductWidgets.scss
@@ -10,8 +10,8 @@
     background-color: #cbbbf6;
   }
   .top{
-    
-  display: flex;
+    padding-top:60px;
+    display: flex;
     justify-content: center;
     gap: 5px;
     align-items: center;
