--- a/dashboard/src/pages/RateSubPages/HourlyRate.scss
+++ b/dashboard/src/pages/RateSubPages/HourlyRate.scss
@@ -41,9 +41,10 @@
 
         .Rchart-container {
            
-            width: 95%;
-            height: 90%;
-            margin-top: 6%;
+            width: 100%;
+            height: 84%;
+            margin-top: 5%;
+            margin-left: -2%;
             cursor: pointer !important;
         }
 
