--- a/dashboard/src/components/SummaryComponents/Boxes/Dropdownbox.scss
+++ b/dashboard/src/components/SummaryComponents/Boxes/Dropdownbox.scss
@@ -2,12 +2,12 @@
   
   position:absolute;
   width: 99%;
-  height: 55px;
+  height: 50px;
   top:100px;
   left: 0.5%;
     
 
-  background: #f3f2f2;
+  background: #4F378B;
   box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.25);
   
 }
