--- a/dashboard/src/pages/Summary/Summary.scss
+++ b/dashboard/src/pages/Summary/Summary.scss
@@ -3,23 +3,110 @@
   .summaryContainer{
     
     .box{
-      
       .pickers{
-        left:25px;
         display: flex;
         position: relative;
         gap: 60px;
-
-        .date{
-          left: 29%;
-          display: flex;
-          position: relative;
-          gap: 60px;
-        }
       }
     }
 
-    
+    .container2{
+      justify-content: center;
+      margin-top: 10px;
+      display: grid;
+      grid-template-columns: 14% 40% 45%;
+      grid-template-rows: 67% 37%;
+      grid-template-areas: 
+      "machines table graph"
+      "machines percentages widgets3"
+      ;
+      grid-gap: 0.2rem;
+
+      .machines{
+        background-color: rgb(216, 230, 230);
+        grid-area: machines;
+        padding-top: 20px;
+        padding-left: 10px;
+        padding-right: 10px;
+
+
+        .machineTitle{
+          padding: 17px;
+          font-weight: 700;
+          font-size: 15px;
+          font-family:sans-serif;
+          justify-items: center;
+          align-items: center;
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 1px 2px rgba(0, 0, 0, 0.05);
+          background-color: rgb(214, 181, 226);
+        }
+      }
+
+      .widgets3{
+        background-color: rgb(228, 236, 236);
+        grid-area: widgets3;
+  
+        display: flex;
+        padding: 20px;
+        gap:20px;
+        
+        .widgets{
+          height: 100%;
+          width: 100%;
+        }
+      }
+
+      .graph{
+        background-color: rgb(225, 231, 231);
+        grid-area: graph;
+        padding: 30px;
+        gap:20px;
+        .chart-container {
+          width: 100%;
+          height: 100%;
+        }
+
+
+      }
+
+      .table{
+        background-color: rgb(225, 231, 231);
+        grid-area: table;
+        padding: 20px;
+        gap:20px;
+        justify-content: center;
+
+        .tableTitle{
+          color: rgb(95, 88, 88);
+          padding: 17px;
+          font-weight: 700;
+          font-size: 18px;
+          font-family:sans-serif;
+          justify-items: center;
+          align-items: center;
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 1px 2px rgba(0, 0, 0, 0.05);
+          background-color: rgb(251, 240, 255);
+        }
+
+        .productTable{
+          height: 85%;
+        }
+  
+      }
+      .percentages{
+        background-color: rgb(225, 231, 231);
+        grid-area: percentages;
+        display: flex;
+        flex-direction: row;
+        padding: 17px;
+        gap:20px;
+
+        .product-percentage {
+        
+          height: 100%;
+        }
+      }
+    }
       
   }
 }
