--- a/dashboard/src/pages/Summary/MachinePage.scss
+++ b/dashboard/src/pages/Summary/MachinePage.scss
@@ -1,6 +1,7 @@
 .machinePage{
   height: 100vh;
   .container{
+    background-color: rgb(229, 232, 232);
     justify-content: center;
     margin-top: 10px;
     display: grid;
@@ -10,23 +11,26 @@
       "progressBar progressBar graph"
       "table table graph"
       "table table exportButton";
-    grid-gap: 0.2rem;
+    grid-gap: 0.4rem;
     height: 100%;
     
     .progressBar{
-      background-color: rgb(216, 230, 230);
+      background-color: rgb(255, 255, 255);
       grid-area: progressBar;
+      display: flex;
+      justify-content: center;
+      padding-top: 15px;
     }
     .table{
-      background-color: rgb(216, 230, 230);
+      background-color: rgb(255, 255, 255);
       grid-area: table;
     }
     .graph{
-      background-color: rgb(216, 230, 230);
+      background-color: rgb(255, 255, 255);
       grid-area: graph;
     }
     .exportButton{
-      background-color: rgb(216, 230, 230);
+      background-color: rgb(255, 255, 255);
       grid-area: exportButton;
     }
   }
