--- a/dashboard/src/pages/Summary/MachinePage.scss
+++ b/dashboard/src/pages/Summary/MachinePage.scss
@@ -26,6 +26,7 @@
       grid-area: table;
     }
     .graph{
+      padding: 20px;
       background-color: rgb(255, 255, 255);
       grid-area: graph;
     }
