--- a/dashboard/src/pages/Summary/ProductPage.scss
+++ b/dashboard/src/pages/Summary/ProductPage.scss
@@ -32,6 +32,7 @@
       grid-area: table;
     }
     .graph{
+      padding: 20px;
       background-color: rgb(255, 255, 255);
       grid-area: graph;
     }
