--- a/dashboard/src/components/SummaryComponents/Tables/Table.scss
+++ b/dashboard/src/components/SummaryComponents/Tables/Table.scss
@@ -17,6 +17,7 @@
 .common-table th, .common-table td {
   padding: 0.75rem;
   border-bottom: 1px solid #ddd;
+  font-size: small;
 }
 
 .common-table th {
